manifests/kustomize/base/metadata/base/metadata-envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-envoy-deployment
  labels:
    component: metadata-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: metadata-envoy
  template:
    metadata:
      labels:
        component: metadata-envoy
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: container
        image: na.artifactory.swg-devops.com/sys-linux-power-team-ftp3distro-docker-images-docker-local/kubeflow-ppc/metadata-envoy:latest
        ports:
        - name: md-envoy
          containerPort: 9090
        - name: envoy-admin
          containerPort: 9901
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 0
          capabilities:
            drop:
            - ALL
