manifests/kustomize/base/metadata/base/metadata-envoy-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: metadata-envoy
  name: metadata-envoy-service
spec:
  selector:
    component: metadata-envoy
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
      name: md-envoy
