manifests/kustomize/base/metadata/base/metadata-grpc-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: metadata
  name: metadata-grpc-service
spec:
  selector:
    component: metadata-grpc-server
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: grpc-api
